--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
             </div>
             <span class="header__favorites-text">Избранное</span>
           </a>
-          <button class="button button--outline" id="header__button-consultation">
+          <button class="button button--outline button-consultation" id="header__button-consultation">
             <svg class="img-chat" width="18" height="18" viewBox="0 0 18 18" fill="#CB0A0A"
               xmlns="http://www.w3.org/2000/svg">
               <path
@@ -133,7 +133,6 @@
       </div>
     </section>
     <section class="team">
-      <!-- <div class="team__container container"> -->
       <h2 class="team__title container">Наша команда</h2>
       <div class="team__main  container">
         <div class="team__leader">
@@ -207,7 +206,6 @@
           </svg>
         </button>
       </div>
-      <!-- </div> -->
     </section>
     <section class="awards">
       <div class="awards__description  container">
@@ -864,7 +862,7 @@
       </div>
       <div class="menu__footer">
         <div class="footer__contacts">
-          <button class="button menu__footer-button">Консультация</button>
+          <button class="button menu__footer-button button-consultation">Консультация</button>
           <a href="1@beloni.ru" class="footer__contacts-email menu-email">1@beloni.ru</a>
           <div class="footer__contacts-phone">
             <svg width="20" height="20" viewBox="0 0 16 16" fill="black" xmlns="http://www.w3.org/2000/svg">
@@ -942,6 +940,7 @@
               <input class="text-field__input" type="text" name="popup-name" id="popup-name" placeholder="Екатерина">
             </div>
             <div class="text-field-phone">
+              <img src="./assets/img/png/flagRB.png" class="popup-ico-flag" alt="ico-flag">
               <label class="text-field__label" for="phone">Введите телефон</label>
               <input class="text-field__input-datalist" type="text" name="salons" list="popup__list" placeholder="+375"
                 value="+375">
@@ -956,11 +955,6 @@
             <textarea class="text-field__textarea" type="text" name="popup-textarea" id="popup-textarea"
               placeholder="Напишите что-нибудь..."></textarea>
           </div>
-          <!-- <select class="select__input" name="country-selector" id="country-selector">
-            <option value="0">Select option</option>
-            <option value="IT">Italy</option>
-            <option value="UK">United Kingdom</option>
-          </select> -->
           <div class="text-field-comments popup__checkbox">
             <input type="checkbox" id="agreement" name="agreement">
             <label for="agreement">Я согласен (-на) на обработку персональных данных</label>
