--- a/blog.html
+++ b/blog.html
@@ -86,7 +86,7 @@
             </div>
             <span class="header__favorites-text">Избранное</span>
           </a>
-          <button class="button button--outline" id="header__button-consultation">
+          <button class="button button--outline button-consultation" id="header__button-consultation">
             <svg class="img-chat" width="18" height="18" viewBox="0 0 18 18" fill="#CB0A0A"
               xmlns="http://www.w3.org/2000/svg">
               <path
@@ -812,7 +812,7 @@
       </div>
       <div class="menu__footer">
         <div class="footer__contacts">
-          <button class="button menu__footer-button">Консультация</button>
+          <button class="button menu__footer-button button-consultation">Консультация</button>
           <a href="1@beloni.ru" class="footer__contacts-email menu-email">1@beloni.ru</a>
           <div class="footer__contacts-phone">
             <svg width="20" height="20" viewBox="0 0 16 16" fill="black" xmlns="http://www.w3.org/2000/svg">
@@ -890,6 +890,7 @@
               <input class="text-field__input" type="text" name="popup-name" id="popup-name" placeholder="Екатерина">
             </div>
             <div class="text-field-phone">
+              <img src="./assets/img/png/flagRB.png" class="popup-ico-flag" alt="ico-flag">
               <label class="text-field__label" for="phone">Введите телефон</label>
               <input class="text-field__input-datalist" type="text" name="salons" list="popup__list" placeholder="+375"
                 value="+375">
@@ -904,11 +905,6 @@
             <textarea class="text-field__textarea" type="text" name="popup-textarea" id="popup-textarea"
               placeholder="Напишите что-нибудь..."></textarea>
           </div>
-          <!-- <select class="select__input" name="country-selector" id="country-selector">
-            <option value="0">Select option</option>
-            <option value="IT">Italy</option>
-            <option value="UK">United Kingdom</option>
-          </select> -->
           <div class="text-field-comments popup__checkbox">
             <input type="checkbox" id="agreement" name="agreement">
             <label for="agreement">Я согласен (-на) на обработку персональных данных</label>
