--- a/catalog.html
+++ b/catalog.html
@@ -84,7 +84,7 @@
             </div>
             <span class="header__favorites-text">Избранное</span>
           </a>
-          <button class="button button--outline" id="header__button-consultation">
+          <button class="button button--outline button-consultation" id="header__button-consultation">
             <svg class="img-chat" width="18" height="18" viewBox="0 0 18 18" fill="#CB0A0A"
               xmlns="http://www.w3.org/2000/svg">
               <path
@@ -599,6 +599,7 @@
                 <input class="text-field__input" type="text" name="name" id="name" placeholder="Ваше имя">
               </div>
               <div class="text-field-phone">
+                <img src="./assets/img/png/flagRB.png" class="popup-ico-flag" alt="ico-flag">
                 <label class="text-field__label" for="phone">Введите номер телефона</label>
                 <input class="text-field__input" type="tel" name="phone" placeholder="+7 (000) 000-00-00">
               </div>
@@ -1174,7 +1175,7 @@
     </div>
     <div class="menu__footer">
       <div class="footer__contacts">
-        <button class="button menu__footer-button">Консультация</button>
+        <button class="button menu__footer-button button-consultation">Консультация</button>
         <a href="1@beloni.ru" class="footer__contacts-email menu-email">1@beloni.ru</a>
         <div class="footer__contacts-phone">
           <svg width="20" height="20" viewBox="0 0 16 16" fill="black" xmlns="http://www.w3.org/2000/svg">
