--- a/credit.html
+++ b/credit.html
@@ -85,7 +85,7 @@
               </div>
               <span class="header__favorites-text">Избранное</span>
             </a>
-            <button class="button button--outline" id="header__button-consultation">
+            <button class="button button--outline button-consultation" id="header__button-consultation">
               <svg class="img-chat" width="18" height="18" viewBox="0 0 18 18" fill="#CB0A0A"
                 xmlns="http://www.w3.org/2000/svg">
                 <path
@@ -96,15 +96,6 @@
           </div>
         </div>
       </div>
-      <!-- <div class="header__main-container container">
-        <ul class=" header__breadcrumb">
-          <li><a href="#">Главная</a></li>
-          <li><a href="#">Каталог кухонь</a></li>
-          <li><a href="#">Современные</a></li>
-          <li>Кухня комбинация массив дуба и белая краска</li>
-        </ul>
-      </div> -->
-
     </header>
     <main>
       <section class="credit">
@@ -763,7 +754,7 @@
         </div>
         <div class="menu__footer">
           <div class="footer__contacts">
-            <button class="button menu__footer-button">Консультация</button>
+            <button class="button menu__footer-button button-consultation">Консультация</button>
             <a href="1@beloni.ru" class="footer__contacts-email menu-email">1@beloni.ru</a>
             <div class="footer__contacts-phone">
               <svg width="20" height="20" viewBox="0 0 16 16" fill="black" xmlns="http://www.w3.org/2000/svg">
@@ -841,6 +832,7 @@
                 <input class="text-field__input" type="text" name="popup-name" id="popup-name" placeholder="Екатерина">
               </div>
               <div class="text-field-phone">
+                <img src="./assets/img/png/flagRB.png" class="popup-ico-flag" alt="ico-flag">
                 <label class="text-field__label" for="phone">Введите телефон</label>
                 <input class="text-field__input-datalist" type="text" name="salons" list="popup__list"
                   placeholder="+375" value="+375">
