--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </div>
             <span class="header__favorites-text">Избранное</span>
           </a>
-          <button class="button button--outline" id="header__button-consultation">
+          <button class="button button--outline button-consultation" id="header__button-consultation">
             <svg class="img-chat" width="18" height="18" viewBox="0 0 18 18" fill="#CB0A0A"
               xmlns="http://www.w3.org/2000/svg">
               <path
@@ -158,10 +158,6 @@
               <div class="card__image">
                 <img src="./assets/img/png/white-kitchen.png" alt="white kitchen">
                 <span class="card__sale">-21%</span>
-                <!-- <span class="card__stock card__stock--store">В наличии на складе</span> -->
-                <!-- <button class="slider__favorite favorite" aria-label="Добавить в избранные"><svg width="18" height="16" viewBox="0 0 18 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M17.75 4.96875C17.75 10.4375 9.64141 14.8641 9.29609 15.0469C9.20508 15.0958 9.10335 15.1215 9 15.1215C8.89665 15.1215 8.79492 15.0958 8.70391 15.0469C8.35859 14.8641 0.25 10.4375 0.25 4.96875C0.251447 3.68455 0.762235 2.45337 1.6703 1.5453C2.57837 0.637235 3.80955 0.126447 5.09375 0.125C6.70703 0.125 8.11953 0.81875 9 1.99141C9.88047 0.81875 11.293 0.125 12.9062 0.125C14.1904 0.126447 15.4216 0.637235 16.3297 1.5453C17.2378 2.45337 17.7486 3.68455 17.75 4.96875Z"/>
-                  </svg></button> -->
               </div>
               <p class="card__description">Кухня с белыми рифлёными фасадами</p>
               <div class="card__pricing">
@@ -988,7 +984,7 @@
       </div>
       <div class="menu__footer">
         <div class="footer__contacts">
-          <button class="button menu__footer-button">Консультация</button>
+          <button class="button menu__footer-button button-consultation">Консультация</button>
           <a href="1@beloni.ru" class="footer__contacts-email menu-email">1@beloni.ru</a>
           <div class="footer__contacts-phone">
             <svg width="20" height="20" viewBox="0 0 16 16" fill="black" xmlns="http://www.w3.org/2000/svg">
@@ -1066,6 +1062,7 @@
               <input class="text-field__input" type="text" name="popup-name" id="popup-name" placeholder="Екатерина">
             </div>
             <div class="text-field-phone">
+              <img src="./assets/img/png/flagRB.png" class="popup-ico-flag" alt="ico-flag">
               <label class="text-field__label" for="phone">Введите телефон</label>
               <input class="text-field__input-datalist" type="text" name="salons" list="popup__list" placeholder="+375"
                 value="+375">
@@ -1080,11 +1077,6 @@
             <textarea class="text-field__textarea" type="text" name="popup-textarea" id="popup-textarea"
               placeholder="Напишите что-нибудь..."></textarea>
           </div>
-          <!-- <select class="select__input" name="country-selector" id="country-selector">
-            <option value="0">Select option</option>
-            <option value="IT">Italy</option>
-            <option value="UK">United Kingdom</option>
-          </select> -->
           <div class="text-field-comments popup__checkbox">
             <input type="checkbox" id="agreement" name="agreement">
             <label for="agreement">Я согласен (-на) на обработку персональных данных</label>
