fix: width catd for anything page

--- a/catalog.html
+++ b/catalog.html
@@ -99,16 +99,15 @@
 
   <main class="catalog">
     <div class="catalog__container container">
-      <section class="catalog-intro">
+      <!-- <section class="catalog-intro">
         <div class="catalog-intro__content">
           <img class="catalog-intro__image" src="./assets/img/png/catalog-intro.png" alt="">
           <h2 class="catalog-intro__title">Кухня-столовая в урбанистическом стиле</h2>
           <p class="catalog-intro__slogan">Напрямую с фабрики в Санкт-Петербурге</p>
           <button class="catalog-intro__button button button--white">Подробнее</button>
         </div>
-      </section>
-
-      <div class="catalog__wrapper">
+      </section> -->
+      <!-- <div class="catalog__wrapper">
         <div class="catalog__filter filter">
           <h2 class="filter__title">Фильтр</h2>
           <div class="filter__container container">
@@ -413,7 +412,7 @@
           </div>
 
         </div>
-
+ -->
 
         <section class="catalog__content">
           <h2 class="catalog__title">Каталог</h2>
@@ -583,9 +582,9 @@
             </ul>
           </div>
         </section>
-      </div>
-
-      <section class="salons">
+    </div>
+    <section class="salons">
+      <div class="salons__container container">
         <div class="salons__entry">
           <div class="salons__entry-text-wrap">
             <h5 class="salons__entry-title">Запишитесь в салон</h5>
@@ -599,7 +598,6 @@
                 <input class="text-field__input" type="text" name="name" id="name" placeholder="Ваше имя">
               </div>
               <div class="text-field-phone">
-                <img src="./assets/img/png/flagRB.png" class="popup-ico-flag" alt="ico-flag">
                 <label class="text-field__label" for="phone">Введите номер телефона</label>
                 <input class="text-field__input" type="tel" name="phone" placeholder="+7 (000) 000-00-00">
               </div>
@@ -616,8 +614,8 @@
                 конфиденциальности.</span></div>
           </form>
         </div>
-      </section>
-    </div>
+      </div>
+    </section>
   </main>
   <footer class="footer">
     <div class="container footer__container">
