--- a/catalog.html
+++ b/catalog.html
@@ -99,15 +99,15 @@
 
   <main class="catalog">
     <div class="catalog__container container">
-      <!-- <section class="catalog-intro">
+      <section class="catalog-intro">
         <div class="catalog-intro__content">
           <img class="catalog-intro__image" src="./assets/img/png/catalog-intro.png" alt="">
           <h2 class="catalog-intro__title">Кухня-столовая в урбанистическом стиле</h2>
           <p class="catalog-intro__slogan">Напрямую с фабрики в Санкт-Петербурге</p>
           <button class="catalog-intro__button button button--white">Подробнее</button>
         </div>
-      </section> -->
-      <!-- <div class="catalog__wrapper">
+      </section>
+      <div class="catalog__wrapper">
         <div class="catalog__filter filter">
           <h2 class="filter__title">Фильтр</h2>
           <div class="filter__container container">
@@ -412,7 +412,7 @@
           </div>
 
         </div>
- -->
+
 
         <section class="catalog__content">
           <h2 class="catalog__title">Каталог</h2>
